[project]
name = "python-threading"
version = "0.1.0"
description = "Comprehensive examples of Python threading, multiprocessing, and async programming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathos>=0.3.4",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
]
